syntax = "proto3";

package task;

option go_package = "pb";

service Authentication {
    rpc Register (RegisterRequest) returns (RegisterResponse){}
    rpc Login (LoginRequest) returns (LoginResponse){}
}

message RegisterRequest{
    string name = 1;
    string email = 2;
    string password = 3;
    bool is_consultant = 4;
}

message RegisterResponse{
    string token = 1;
    string error = 2;
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    string token = 1;
    string error = 2;
}

